[package]
name = "intercomm"
version = "0.1.0"
authors = ["Dmitry Belyaev <mail@d-belyaev.ru>"]
description = "Asynchronous inter-component communication library"
repository = "https://github.com/bingo347/intercomm"
license = "MIT"
keywords = ["intercom", "notification", "request-response"]
categories = ["asynchronous"]
edition = "2021"
rust-version = "1.56"

[dependencies]

[dependencies.tokio]
version = "1"
features = [
    "sync",
    "parking_lot",
]

[dev-dependencies]
tokio = { version = "1", features = ["full"]}